# aider_to_claude

ai-coding-course-claude/lessons/lesson-01-hello-ai-coding/: summary.md
ai-coding-course-claude/lessons/lesson-01-hello-ai-coding/prompts/: readme.md
ai-coding-course-claude/lessons/lesson-02-multi-file-editing/: summary.md
ai-coding-course-claude/lessons/lesson-02-multi-file-editing/prompts/: readme.md
ai-coding-course-claude/lessons/lesson-02-multi-file-editing/src/claude-2/: README.md  pyproject.toml  transcript.txt  transcript2.txt
ai-coding-course-claude/lessons/lesson-02-multi-file-editing/src/claude-2/AI_DOCS/: gemini_structured_output_example_code.md
ai-coding-course-claude/lessons/lesson-02-multi-file-editing/src/claude-2/src/: argparse.py  constants.py  data_types.py  gemini_llm.py  main.py
ai-coding-course-claude/lessons/lesson-03-perfect-prompt/src/claude-3/: README.md  pyproject.toml  transcript.txt  transcript2.txt  transcript_analysis.json  transcript_analysis.md  transcript_analysis.txt  transcript_analysis.yml
ai-coding-course-claude/lessons/lesson-03-perfect-prompt/src/claude-3/AI_DOCS/: gemini_structured_output_example_code.md
ai-coding-course-claude/lessons/lesson-03-perfect-prompt/src/claude-3/src/: chart.py  constants.py  data_types.py  gemini_llm.py  main.py  output_format.py
ai-coding-course-claude/lessons/lesson-05-reasoning-models/src/claude-5/: README.md  pyproject.toml  transcript.txt  transcript2.txt
ai-coding-course-claude/lessons/lesson-05-reasoning-models/src/claude-5/AI_DOCS/: gemini_structured_output_example_code.md
ai-coding-course-claude/lessons/lesson-05-reasoning-models/src/claude-5/src/: argparse_module.py  chart.py  constants.py  datatypes.py  gemini_llm.py  main.py  output_format.py
(+25 files in other folders)
